fix stageIndex on abort